[gd_scene load_steps=12 format=3 uid="uid://dcn3aqq0h7ptu"]

[ext_resource type="Script" path="res://addons/godot-course/ui/menus/login_menu.gd" id="1_6rtff"]
[ext_resource type="Theme" uid="uid://dlwl2v5s14s14" path="res://addons/godot-course/ui/main_theme.tres" id="1_mgm3l"]
[ext_resource type="PackedScene" uid="uid://b24cwfhlecpi1" path="res://addons/godot-course/bubble/godette/godette.tscn" id="2_4d7hs"]
[ext_resource type="FontFile" uid="uid://dfvoqria0m0jj" path="res://addons/godot-course/ui/fonts/square block.ttf" id="3_hx4jr"]
[ext_resource type="FontFile" uid="uid://dg3dawn3jkrrn" path="res://addons/godot-course/ui/fonts/Accuratist.otf" id="4_1tmvo"]
[ext_resource type="AudioStream" uid="uid://bip7no0q26c03" path="res://addons/godot-course/ui/sounds/click.wav" id="5_ctden"]
[ext_resource type="Texture2D" uid="uid://x3mhqjkjpda" path="res://addons/godot-course/ui/icons/icon_close.png" id="6_718fc"]
[ext_resource type="AudioStream" uid="uid://bn0so6fbchkfb" path="res://addons/godot-course/ui/sounds/close.wav" id="8_ec51j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0s07p"]
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.701961, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o27pe"]
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.254902, 0.254902, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rw51h"]
bg_color = Color(1, 0.254902, 0.254902, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.12549, 0.12549, 0.12549, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="login_menu" type="CanvasLayer"]
script = ExtResource("1_6rtff")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 8
theme = ExtResource("1_mgm3l")

[node name="PanelContainer" type="PanelContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -310.5
offset_top = -125.0
offset_right = 310.5
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="Godette" parent="Panel/PanelContainer" instance=ExtResource("2_4d7hs")]
unique_name_in_owner = true
position = Vector2(328.5, -33.5)

[node name="MarginContainer" type="MarginContainer" parent="Panel/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Lb_message" type="Label" parent="Panel/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hx4jr")
theme_override_font_sizes/font_size = 24
text = "Ingresa tu correo y contraseña"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Input_email" type="LineEdit" parent="Panel/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
placeholder_text = "Correo"
alignment = 1
caret_blink = true

[node name="Input_password" type="LineEdit" parent="Panel/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
placeholder_text = "Contraseña"
alignment = 1
caret_blink = true
secret = true

[node name="check_password" type="CheckButton" parent="Panel/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0, 0.619608, 1, 1)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "MOSTRAR CONTRASEÑA"

[node name="Bt_ok" type="Button" parent="Panel/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "INGRESAR"

[node name="Lb_title" type="Label" parent="Panel/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_1tmvo")
theme_override_font_sizes/font_size = 55
text = "Iniciar sesión"

[node name="Bt_close" type="Button" parent="Panel/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(0.701961, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0.12549, 0.12549, 0.12549, 1)
theme_override_colors/icon_hover_color = Color(1, 0.254902, 0.254902, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_0s07p")
theme_override_styles/hover = SubResource("StyleBoxFlat_o27pe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rw51h")
icon = ExtResource("6_718fc")
expand_icon = true

[node name="sd_click" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_ctden")
bus = &"UI"

[node name="sd_close" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ec51j")
bus = &"UI"
